--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
   </div>
 </div>
    
-      <!-- <div class="keyboard-container">
-        <div id="popisky">-->
+        <div class="keyboard-container">
+        <div id="popisky"> 
          <div class="tone-meter-container">
         
         <div class="tone-meter-title">
@@ -247,3 +247,4 @@
  <script src="voiceControl.js"></script>   
 </body>
 </html>
+
